--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -88,3 +88,11 @@ h6 {
     width: 100%;
 }
 
+.header {
+    display: grid;
+    justify-content: left;
+    grid-template-columns: auto auto;
+    align-items: center;
+    column-gap: 10px;
+    margin-left: 10px;
+}
