--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -91,7 +91,7 @@ h6 {
 .header {
     display: grid;
     justify-content: left;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
     align-items: center;
     column-gap: 10px;
     margin-left: 10px;
