--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ h6 {
 .header {
 		display: grid;
 		justify-content: left;
-		grid-template-columns: auto auto;
+		grid-template-columns: auto auto auto;
 		align-items: center;
 		column-gap: 10px;
 		margin-left: 10px;
