--- a/css/style.css
+++ b/css/style.css
@@ -98,9 +98,9 @@ h6 {
 
 .header {
 		display: grid;
-		justify-content: left;
-		grid-template-columns: auto auto auto;
+		grid-template-columns: 1fr 1fr 3fr 1fr;
 		align-items: center;
 		column-gap: 10px;
 		margin-left: 10px;
+		margin-right: 10px;
 }
