--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -91,7 +91,7 @@ h6 {
 .header {
     display: grid;
     // justify-content: left;
-    grid-template-columns: 1fr 1fr 3fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr;
     align-items: center;
     column-gap: 10px;
     margin-left: 10px;
